# bad-rust-markov

./: Cargo.toml  data
src/: main.rs
